turtleart.housetree.HouseTree.scala.error
Compilation error:
HouseTree:16: error: value gauche is not a member of Unit
  for (i<-0 to 3) {gauche(90);avance(50)} gauche(90)
                                          ^